--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -7,6 +7,7 @@ body {
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif !important;
   font-size: 14px;
+  scroll-behavior: smooth;
 }
 
 a {
