--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -14,6 +14,10 @@ a {
   text-decoration: none;
 }
 
+img {
+  pointer-events: none;
+}
+
 * {
   box-sizing: border-box;
   font-family: "Roboto", -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
